# diggforks

./: README.md  diggforks.py  pyproject.toml  setup.py  tably.gitconfig
diggforks/: __init__.py
