[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "diggforks"
version = "0.1"
description = "A tool to incorporate all GitHub project forks as branches"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

#[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"
